feat:Added Changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -260,7 +260,7 @@
                         </div>
                         
                         <div class="card market-insights">
-                            <h3 style="color: #1a202c !important; margin-bottom: var(--space-lg);">📈 Market Insights</h3>
+                            <h3 style="margin-bottom: var(--space-lg);">📈 Market Insights</h3>
                             <div class="insight-section">
                                 <div class="insight-title">Price Trend</div>
                                 <div id="priceTrend"></div>
